fix pagination in dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -54,7 +54,11 @@ a {
   }
 
   .css-tdnytb-MuiButtonBase-root-MuiPaginationItem-root {
-    color: white;
+    color: white !important;
+  }
+
+  .css-tdnytb-MuiButtonBase-root-MuiPaginationItem-root.Mui-selected {
+    color: #1976d2 !important;
   }
 }
 
